[package]
name = "ws_exercise"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = '0.7', features = ["ws"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
